[gd_scene load_steps=99 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://pausing.gd" type="Script" id=2]
[ext_resource path="res://MarioLuigi2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/ninja/Slide__000.png" type="Texture" id=4]
[ext_resource path="res://sprites/ninja/Slide__001.png" type="Texture" id=5]
[ext_resource path="res://sprites/ninja/Slide__002.png" type="Texture" id=6]
[ext_resource path="res://sprites/ninja/Slide__003.png" type="Texture" id=7]
[ext_resource path="res://sprites/ninja/Slide__004.png" type="Texture" id=8]
[ext_resource path="res://sprites/ninja/Slide__005.png" type="Texture" id=9]
[ext_resource path="res://sprites/ninja/Slide__006.png" type="Texture" id=10]
[ext_resource path="res://sprites/ninja/Slide__007.png" type="Texture" id=11]
[ext_resource path="res://sprites/ninja/Slide__008.png" type="Texture" id=12]
[ext_resource path="res://sprites/ninja/Slide__009.png" type="Texture" id=13]
[ext_resource path="res://sprites/ninja/Idle__000.png" type="Texture" id=14]
[ext_resource path="res://sprites/ninja/Idle__001.png" type="Texture" id=15]
[ext_resource path="res://sprites/ninja/Idle__002.png" type="Texture" id=16]
[ext_resource path="res://sprites/ninja/Idle__003.png" type="Texture" id=17]
[ext_resource path="res://sprites/ninja/Idle__004.png" type="Texture" id=18]
[ext_resource path="res://sprites/ninja/Idle__005.png" type="Texture" id=19]
[ext_resource path="res://sprites/ninja/Idle__006.png" type="Texture" id=20]
[ext_resource path="res://sprites/ninja/Idle__007.png" type="Texture" id=21]
[ext_resource path="res://sprites/ninja/Idle__008.png" type="Texture" id=22]
[ext_resource path="res://sprites/ninja/Idle__009.png" type="Texture" id=23]
[ext_resource path="res://sprites/ninja/Dead__000.png" type="Texture" id=24]
[ext_resource path="res://sprites/ninja/Dead__001.png" type="Texture" id=25]
[ext_resource path="res://sprites/ninja/Dead__002.png" type="Texture" id=26]
[ext_resource path="res://sprites/ninja/Dead__003.png" type="Texture" id=27]
[ext_resource path="res://sprites/ninja/Dead__004.png" type="Texture" id=28]
[ext_resource path="res://sprites/ninja/Dead__005.png" type="Texture" id=29]
[ext_resource path="res://sprites/ninja/Dead__006.png" type="Texture" id=30]
[ext_resource path="res://sprites/ninja/Dead__007.png" type="Texture" id=31]
[ext_resource path="res://sprites/ninja/Dead__008.png" type="Texture" id=32]
[ext_resource path="res://sprites/ninja/Dead__009.png" type="Texture" id=33]
[ext_resource path="res://sprites/ninja/Run__000.png" type="Texture" id=34]
[ext_resource path="res://sprites/ninja/Run__001.png" type="Texture" id=35]
[ext_resource path="res://sprites/ninja/Run__002.png" type="Texture" id=36]
[ext_resource path="res://sprites/ninja/Run__003.png" type="Texture" id=37]
[ext_resource path="res://sprites/ninja/Run__004.png" type="Texture" id=38]
[ext_resource path="res://sprites/ninja/Run__005.png" type="Texture" id=39]
[ext_resource path="res://sprites/ninja/Run__006.png" type="Texture" id=40]
[ext_resource path="res://sprites/ninja/Run__007.png" type="Texture" id=41]
[ext_resource path="res://sprites/ninja/Run__008.png" type="Texture" id=42]
[ext_resource path="res://sprites/ninja/Run__009.png" type="Texture" id=43]
[ext_resource path="res://sprites/ninja/Throw__000.png" type="Texture" id=44]
[ext_resource path="res://sprites/ninja/Throw__001.png" type="Texture" id=45]
[ext_resource path="res://sprites/ninja/Throw__002.png" type="Texture" id=46]
[ext_resource path="res://sprites/ninja/Throw__003.png" type="Texture" id=47]
[ext_resource path="res://sprites/ninja/Throw__004.png" type="Texture" id=48]
[ext_resource path="res://sprites/ninja/Throw__005.png" type="Texture" id=49]
[ext_resource path="res://sprites/ninja/Throw__006.png" type="Texture" id=50]
[ext_resource path="res://sprites/ninja/Throw__007.png" type="Texture" id=51]
[ext_resource path="res://sprites/ninja/Throw__008.png" type="Texture" id=52]
[ext_resource path="res://sprites/ninja/Throw__009.png" type="Texture" id=53]
[ext_resource path="res://sprites/ninja/Attack__000.png" type="Texture" id=54]
[ext_resource path="res://sprites/ninja/Attack__001.png" type="Texture" id=55]
[ext_resource path="res://sprites/ninja/Attack__002.png" type="Texture" id=56]
[ext_resource path="res://sprites/ninja/Attack__003.png" type="Texture" id=57]
[ext_resource path="res://sprites/ninja/Attack__004.png" type="Texture" id=58]
[ext_resource path="res://sprites/ninja/Attack__005.png" type="Texture" id=59]
[ext_resource path="res://sprites/ninja/Attack__006.png" type="Texture" id=60]
[ext_resource path="res://sprites/ninja/Attack__007.png" type="Texture" id=61]
[ext_resource path="res://sprites/ninja/Attack__008.png" type="Texture" id=62]
[ext_resource path="res://sprites/ninja/Attack__009.png" type="Texture" id=63]
[ext_resource path="res://sprites/ninja/Glide_000.png" type="Texture" id=64]
[ext_resource path="res://sprites/ninja/Glide_001.png" type="Texture" id=65]
[ext_resource path="res://sprites/ninja/Glide_002.png" type="Texture" id=66]
[ext_resource path="res://sprites/ninja/Glide_003.png" type="Texture" id=67]
[ext_resource path="res://sprites/ninja/Glide_004.png" type="Texture" id=68]
[ext_resource path="res://sprites/ninja/Glide_005.png" type="Texture" id=69]
[ext_resource path="res://sprites/ninja/Glide_006.png" type="Texture" id=70]
[ext_resource path="res://sprites/ninja/Glide_007.png" type="Texture" id=71]
[ext_resource path="res://sprites/ninja/Glide_008.png" type="Texture" id=72]
[ext_resource path="res://sprites/ninja/Glide_009.png" type="Texture" id=73]
[ext_resource path="res://sprites/ninja/Jump__000.png" type="Texture" id=74]
[ext_resource path="res://sprites/ninja/Jump__001.png" type="Texture" id=75]
[ext_resource path="res://sprites/ninja/Jump__002.png" type="Texture" id=76]
[ext_resource path="res://sprites/ninja/Jump__003.png" type="Texture" id=77]
[ext_resource path="res://sprites/ninja/Jump__004.png" type="Texture" id=78]
[ext_resource path="res://sprites/ninja/Jump__005.png" type="Texture" id=79]
[ext_resource path="res://sprites/ninja/Jump__006.png" type="Texture" id=80]
[ext_resource path="res://sprites/ninja/Jump__007.png" type="Texture" id=81]
[ext_resource path="res://sprites/ninja/Jump__008.png" type="Texture" id=82]
[ext_resource path="res://sprites/ninja/Jump__009.png" type="Texture" id=83]
[ext_resource path="res://audio/sword4.wav" type="AudioStream" id=84]
[ext_resource path="res://audio/ouch.wav" type="AudioStream" id=85]
[ext_resource path="res://audio/kunai.wav" type="AudioStream" id=86]
[ext_resource path="res://audio/Chiar2.wav" type="AudioStream" id=87]
[ext_resource path="res://audio/Pulo2.wav" type="AudioStream" id=88]
[ext_resource path="res://audio/FundoJogo.wav" type="AudioStream" id=89]
[ext_resource path="res://audio/morte.wav" type="AudioStream" id=90]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0627451, 0.647059, 0.305882, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.466667, 0.0313726, 0.0313726, 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": false,
"name": "die",
"speed": 2.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "run",
"speed": 3.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ) ],
"loop": false,
"name": "kunai",
"speed": 5.0
}, {
"frames": [ ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ) ],
"loop": false,
"name": "sword",
"speed": 5.0
}, {
"frames": [ ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ) ],
"loop": true,
"name": "glide",
"speed": 5.0
}, {
"frames": [ ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 46.0142, 105.233 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 48.6974, 104.184 )

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.494118, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 38.3888, 97.8577 )

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 605.938, 311.169 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="BarraVida" type="CanvasLayer" parent="."]

[node name="Barra_vida" type="ProgressBar" parent="BarraVida"]
margin_left = 33.8078
margin_top = 20.6243
margin_right = 323.808
margin_bottom = 49.6243
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 1000.0
step = 10.0
value = 1000.0
percent_visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer"]
pause_mode = 2
margin_left = 334.625
margin_top = 107.855
margin_right = 696.621
margin_bottom = 179.855
size_flags_horizontal = 5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Pausado!!"
uppercase = true

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -94.3446, 109.267 )
scale = Vector2( 0.503505, 0.48656 )
frames = SubResource( 4 )
animation = "sword"
frame = 9
speed_scale = 5.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -93.0997, 111.15 )
shape = SubResource( 5 )
one_way_collision_margin = 0.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 374.86, -101.35 )
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Dano" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollShapeDano" type="CollisionShape2D" parent="Dano"]
position = Vector2( -92.7179, 111.108 )
shape = SubResource( 6 )

[node name="Dano_animation" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/dano = SubResource( 7 )

[node name="Espada" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollShapEspada" type="CollisionShape2D" parent="Espada"]
position = Vector2( -92.4016, 110.639 )
shape = SubResource( 8 )

[node name="espadafx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 84 )
volume_db = 10.0

[node name="danofx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 85 )
volume_db = 15.0

[node name="kunaifx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 86 )
volume_db = 20.0

[node name="chiarfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 87 )

[node name="pulofx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 88 )

[node name="MusicadFundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 89 )
volume_db = -10.0

[node name="Mortefx" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 90 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Dano" to="." method="_on_Dano_body_entered"]
[connection signal="body_entered" from="Espada" to="." method="_on_Espada_body_entered"]
[connection signal="finished" from="Mortefx" to="." method="_on_Mortefx_finished"]
